Bug 422302 - [kcm/kwinrules] Window role is missing the match-type dropdown
Summary: [kcm/kwinrules] Window role is missing the match-type dropdown
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: rules (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-31 20:43 UTC by Duncan
Modified: 2020-06-01 18:27 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Duncan 2020-05-31 20:43:42 UTC
+++ This bug was initially created as a clone of Bug #421583 +++
OK, I'm seeing window role now, the appearance hackaround for the above bug seems to have worked and with all the bug fixes so far window rules are finally getting reasonably usable again without having to resort to a text-editing the rc file. Thanks.  =:^)

But... the role config is only half there -- just the textbox.  Where's the match-type drop-down (similar to the ones for window class and window title, unimportant/exact/substring/regex match) to go with it?

[I decided this should be a new bug rather than a followup on the cloned-from since that one was the result of an upstream kirigami or possibly further upstream qt bug and I don't believe this aspect has anything to do with that... unless of course the match-type box is there and is just being hidden by the same kirigami/qt bug, which for all I know could indeed be the case...]
Comment 1 Ismael Asensio 2020-06-01 18:27:25 UTC
Git commit 0a06ee12c6582a426efb43b638d651eefb703861 by Ismael Asensio.
Committed on 01/06/2020 at 18:23.
Pushed by iasensio into branch 'Plasma/5.19'.

[kcm/kwinrules] Fix "window role" combo not showing up

Correctly set the policy of `windowrole` property to `StringMatch`.
FIXED-IN: 5.19

M  +1    -1    kcmkwin/kwinrules/rulesmodel.cpp

https://invent.kde.org/plasma/kwin/commit/0a06ee12c6582a426efb43b638d651eefb703861