[kcm/kwinrules] Fix "window role" combo not showing up

Correctly set the policy of `windowrole` property to `StringMatch`.

BUG: 422302
FIXED-IN: 5.19